--- a/Makefile.win
+++ b/Makefile.win
@@ -1,4 +1,4 @@
-# Project: Contact Management System
+# Project: PhoneBook Management System
 # Makefile created by Embarcadero Dev-C++ 6.3
 
 CPP      = g++.exe -D__DEBUG__
